<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="marioaks.entertainmentApp.MainActivity"
    tools:showIn="@layout/activity_main">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_width="133dp"
                android:layout_height="133dp"
                android:id="@+id/imageView"
                android:maxHeight="133dp"
                android:maxWidth="133dp"
                android:src="@drawable/avatar"
                android:cropToPadding="false"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_profile"
                android:id="@+id/textView" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Library"
                android:id="@+id/library_button"
                android:onClick="onLibraryButtonClick"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:paddingTop="10dp"
            android:id="@+id/linearLayout2">
<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_books"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_tv"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_movies"
                android:id="@+id/textView4" />
                -->

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:paddingTop="5dp"
            android:id="@+id/relativeLayout">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_spinner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:spinnerMode="dropdown"
                android:entries="@array/profile_spinner_options"
                android:prompt="@string/profile_spinner_default"
                android:layout_toStartOf="@+id/button"
                android:layout_toLeftOf="@+id/button"
                android:layout_centerVertical="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show"
                android:id="@+id/button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="showScreen"/>
        </RelativeLayout>

        <RelativeLayout android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout">
            <EditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Title of the Media"
                />
            <Spinner android:id="@+id/media_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:entries="@array/media_array"
                android:gravity="center"
                android:prompt="@string/media_default"
                android:layout_below="@+id/title"
                android:layout_alignLeft="@+id/title"
                android:layout_marginTop="10dp"
                android:drawSelectorOnTop="true" />
            <Spinner android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawSelectorOnTop="true"
                android:spinnerMode="dropdown"
                android:entries="@array/percentages"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:prompt="@string/percent_default"
                android:layout_toRightOf="@id/media_type"
                android:layout_alignBaseline="@id/media_type" />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_toRightOf="@+id/percent">
                <Button
                    android:id="@+id/enter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:onClick="onEnterButtonClick"
                    android:text="ENTER INFO" />
            </RelativeLayout>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recycleView"
            android:layout_below="@id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ViewAnimator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewAnimator"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

</RelativeLayout>
